# velo

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
src/: db.rs  error.rs  main.rs  storage.rs  tests.rs
src/commands/: blame.rs  branches.rs  cherry_pick.rs  diff.rs  gc.rs  grep.rs  history.rs  init.rs  logs.rs  merge.rs  mod.rs  rebase.rs  redo.rs  resolve.rs  restore.rs  save.rs  show.rs  squash.rs  stash.rs  status.rs  switch.rs  tag.rs  undo.rs
