[package]
name = "velo"
version = "2.2.0"
edition = "2021"

[dependencies]
clap        = { version = "4.6",  features = ["derive"] }
blake3      = { version = "1.8",  features = ["rayon"] }
zstd        = "0.13"
rusqlite    = { version = "0.39", features = ["bundled"] }
hex         = "0.4"
rayon       = "1.11"
similar     = "2.5"
console     = "0.16"
chrono      = "0.4"
ignore      = "0.4"
memmap2     = "0.9"
parking_lot = "0.12"

[dev-dependencies]
tempfile  = "3.27"